--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 
-VITE_BACKEND_URL=https://backend-equilibrium-login.vercel.app
+#VITE_BACKEND_URL=https://backend-equilibrium-login.vercel.app
 
-#VITE_BACKEND_URL=http://localhost:4000
+VITE_BACKEND_URL=http://localhost:4000
 
